# docparser

./: .gitignore  CMakeLists.txt  LICENSE  README.md  docparser.pro
.reuse/: dep5
3rdpart/fileext/: fileext.cpp
3rdpart/fileext/csv/: csv.cpp
3rdpart/fileext/doc/: doc.cpp  doc.hpp
3rdpart/fileext/excel/: sheet.cpp  sheet.hpp  xlsx.cpp
3rdpart/fileext/ooxml/: ooxml.cpp
3rdpart/fileext/pdf/: pdf.hpp
3rdpart/fileext/rtf/: formatting.cpp  formatting.hpp  table.cpp  table.hpp
3rdpart/fileext/xlsb/: xlsb.h
3rdpart/utils/: getoptpp.cpp  lodepng.cpp  utils.pri
archlinux/: PKGBUILD
debian/: changelog  control  copyright
src/: CMakeLists.txt  docparser.cpp  docparser.h  docparser.pc.in  src.pro
src/fileext/: fileext.hpp  fileext.pri
src/fileext/cfb/: cfb.cpp
src/fileext/csv/: csv.hpp
src/fileext/doc/: doc.cpp
src/fileext/docx/: docx.cpp  docx.hpp
src/fileext/excel/: book.cpp  book.hpp  excel.cpp  excel.hpp  formula.cpp  sheet.cpp  xlsx.hpp
src/fileext/odf/: odf.cpp  odf.hpp
src/fileext/ooxml/: ooxml.hpp
src/fileext/ppt/: ppt.cpp  ppt.hpp
src/fileext/pptx/: pptx.hpp
src/fileext/rtf/: rtf.hpp
src/fileext/txt/: txt.cpp  txt.hpp
src/utils/: miniz.c  utils.pri
tests/: CMakeLists.txt  autotest.cpp  main.cpp
tools/: doc_parser.cpp  tools.pro
